lab6/front/service-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: demo-apps
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
